apps/media/qbittorrent/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbittorrent.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: qbittorrent-tls
